--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,36 +1,10 @@
 cmake_minimum_required(VERSION 3.8)
 project(TobiiPro
 	LANGUAGES CXX
-	VERSION 0.1.0)
-include(Findliblsl.cmake)
-
-# create an imported target we later add the required information to
-add_library(tobii SHARED IMPORTED)
-
-# find the tobii_research.h header in the subfolder tobii/include
-find_path(TOBII_SDK_INCLUDE_PATH
-	name "tobii_research.h"
-	PATHS "tobii/include"
-)
-# find a shared library called tobii_research.dll or libtobii_research.so
-# in tobii/lib
-find_library(TOBII_SDK_LIB tobii_research
-	PATHS "${CMAKE_CURRENT_LIST_DIR}/tobii/lib"
-)
-if(NOT TOBII_SDK_LIB)
-	message(FATAL_ERROR "Tobii SDK library not found")
-endif()
-# Windows needs additional help
-get_filename_component(libext ${TOBII_SDK_LIB} EXT)
-if(libext STREQUAL ".lib")
-	set_target_properties(tobii PROPERTIES IMPORTED_IMPLIB ${TOBII_SDK_LIB})
-	string(REPLACE ".lib" ".dll" TOBII_SDK_LIB ${TOBII_SDK_LIB})
-endif()
-# add the paths we just found to the tobii library target
-set_target_properties(tobii PROPERTIES
-	INTERFACE_INCLUDE_DIRECTORIES "${TOBII_SDK_INCLUDE_PATH}"
-	IMPORTED_LOCATION "${TOBII_SDK_LIB}"
-)
+	VERSION 1.13.0)
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+find_package(liblsl REQUIRED)
+find_package(tobii_research REQUIRED)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
@@ -50,16 +24,16 @@ add_executable(${PROJECT_NAME} MACOSX_BUNDLE WIN32
 )
 
 add_executable(tobiisynctest tobiisynctest.cpp)
-target_link_libraries(tobiisynctest tobii)
+target_link_libraries(tobiisynctest TobiiPro::tobii_research)
 add_executable(tobiifinder tobiifinder.cpp)
-target_link_libraries(tobiifinder tobii)
+target_link_libraries(tobiifinder TobiiPro::tobii_research)
 
 target_link_libraries(${PROJECT_NAME}
 	PRIVATE
 	Qt5::Widgets
 	Threads::Threads
 	LSL::lsl
-	tobii
+	TobiiPro::tobii_research
 )
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_14)
 target_compile_features(tobiisynctest PUBLIC cxx_std_14)
@@ -70,4 +44,5 @@ installLSLAuxFiles(${PROJECT_NAME}
 	tobiilogo.svg
 	${TOBII_SDK_LIB}
 )
+
 LSLGenerateCPackConfig()
