CMake: find package configuration from liblsl >= 1.13

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,18 @@ project(TobiiPro
 	LANGUAGES CXX
 	VERSION 1.13.0)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
-find_package(liblsl REQUIRED)
 find_package(tobii_research REQUIRED)
+
+# Find an installed liblsl in paths set by the user (LSL_INSTALL_ROOT)
+# and some default paths
+find_package(LSL REQUIRED
+	HINTS ${LSL_INSTALL_ROOT}
+	"${CMAKE_CURRENT_LIST_DIR}/../../LSL/liblsl/build/"
+	"${CMAKE_CURRENT_LIST_DIR}/../../LSL/liblsl/out/build/x64-Release"
+	PATH_SUFFIXES share/LSL)
+get_filename_component(LSL_PATH ${LSL_CONFIG} DIRECTORY)
+message(STATUS "Found LSL lib in ${LSL_PATH}")
+LSLAPP_Setup_Boilerplate()
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
